@@ -1,5 +1,14 @@
 2015-03-06  Joseph Pecoraro  <pecoraro@apple.com>
 
+        Web Inspector: Adopt Object Literal Method Property Syntax
+        https://bugs.webkit.org/show_bug.cgi?id=142409
+
+        Reviewed by Timothy Hatcher.
+
+        Mechanical change touching lots of files.
+
+2015-03-06  Joseph Pecoraro  <pecoraro@apple.com>
+
         Web Inspector: Adopt Object Literal Shorthand Property Construction Syntax
         https://bugs.webkit.org/show_bug.cgi?id=142374
 
